# VitaStellar-Contracts

./: CONTRIBUTING.md  Cargo.toml  makefile  package-lock.json  package.json  rustfmt.toml
config/: health_alerts_config.json
contract_optimizer/src/: complexity.rs  lib.rs
contracts/anomaly_detection/src/: lib.rs
contracts/appointment_booking_escrow/src/: lib.rs
contracts/common_error/src/: lib.rs
contracts/contract_monitoring/src/: lib.rs
contracts/contract_template/src/: test.rs
contracts/contract_usage_analytics/src/: lib.rs
contracts/contract_verification/src/: lib.rs
contracts/cross_chain_access/src/: lib.rs
contracts/crypto_registry/src/: lib.rs
contracts/escrow/src/: lib.rs
contracts/explainable_ai/src/: lib.rs
contracts/governor/src/: lib.rs
contracts/identity_registry/src/: comprehensive_tests.rs  lib.rs
contracts/load_testing/src/: lib.rs  scenarios.rs
contracts/medical_record_search/src/: lib.rs
contracts/patient_consent_management/src/: lib.rs
contracts/pharma_supply_chain/src/: lib.rs
contracts/timelock/src/: lib.rs  time_dependent_tests.rs
contracts/zkp_registry/src/: lib.rs  range_proof.rs  recursive_proof.rs  test.rs  verifier.rs
docs/: ERROR_CODES.md  MASTER_THREAT_MODEL.md  REFACTORING_SUGGESTIONS.md  TECHNICAL_DEBT.md
libs/access_utils/: Cargo.toml
libs/access_utils/src/: counter.rs  lib.rs
scripts/: profile.sh  validate_release.sh
tests/: Cargo.toml
tests/integration/: mod.rs
tests/unit/: mod.rs
tests/utils/: performance.rs  test_data.rs  test_fixtures.rs
