[workspace]
resolver = "2"
members = [
    "contracts/*",
    "contract_optimizer",
    "tests",
    "tests/interoperability_suite",
]
exclude = [
    "contracts/credential_notifications",
    "contracts/medical_imaging",
    "contracts/healthcare_compliance",
    "contracts/clinical_nlp",
    "contracts/clinical_decision_support",
    "contracts/remote_patient_monitoring",
    "contracts/healthcare_analytics_dashboard",
    "contracts/healthcare_data_marketplace",
    "contracts/telemedicine",
    "contracts/patient_portal",
    "contracts/mental_health_support",
    "contracts/patient_gamification",
    "contracts/medical_imaging_ai",
    "contracts/dicomweb_services",
    "contracts/health_data_access_logging",
    "contracts/mfa",
    "contracts/multi_region_orchestrator",
    "contracts/regional_node_manager",
    "contracts/digital_twin",
    "contracts/aml",
    "contracts/forensics",
    "contracts/audit",
    "contracts/rbac",
    "contracts/federated_learning",
    "contracts/sync_manager",
    "contracts/failover_detector",
    "contracts/healthcare_compliance_automation",
    "contracts/drug_discovery",
    "contracts/health_check",
    "contracts/governance_integration_tests",
]

[workspace.dependencies]
soroban-sdk = { version = "=21.7.7" }
soroban-cli = "=21.7.7"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VitaStellar Contributors <hello@vitastellar.io>"]
license = "MIT"
repository = "https://github.com/VitaStellar/VitaStellar-Contracts"

# Force compatible versions to fix stellar-xdr dependency conflicts
# Note: arbitrary dependencies removed to fix workspace inheritance issues

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
