[workspace]
resolver = "2"
members = [
    "contracts/*",
    "contract_optimizer",
    "tests",
    "tests/interoperability_suite",
]

[workspace.dependencies]
soroban-sdk = { version = "=21.7.7" }
soroban-cli = "=21.7.7"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VitaStellar Contributors <hello@vitastellar.io>"]
license = "MIT"
repository = "https://github.com/VitaStellar/VitaStellar-Contracts"

# Force compatible versions to fix stellar-xdr dependency conflicts
# Note: arbitrary dependencies removed to fix workspace inheritance issues

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
