[package]
name = "vitastellar-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
sut_token = { path = "../contracts/sut_token" }
reputation = { path = "../contracts/reputation" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[lib]
name = "vitastellar_tests"
path = "lib.rs"
